[gd_scene load_steps=15 format=2]

[ext_resource path="res://game/textbox.gd" type="Script" id=1]
[ext_resource path="res://assets/PixelText.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Player_found_Chest.png" type="Texture" id=3]
[ext_resource path="res://assets/Player_meets_oldman.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.129412, 0.121569, 0.121569, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.345098, 0.345098, 1 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 2 )

[node name="Textbox" type="CanvasLayer"]
layer = 3
script = ExtResource( 1 )

[node name="FoundChest" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
centered = false

[node name="SusOldMan" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="TextboxCointainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -168.0
margin_right = -30.0
margin_bottom = -30.0

[node name="Panel" type="Panel" parent="TextboxCointainer"]
margin_right = 964.0
margin_bottom = 138.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextboxCointainer"]
margin_right = 964.0
margin_bottom = 138.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="TextboxCointainer/MarginContainer"]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 948.0
margin_bottom = 122.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxCointainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 948.0
margin_bottom = 122.0

[node name="Start" type="Label" parent="TextboxCointainer/MarginContainer/HBoxContainer"]
margin_right = 11.0
margin_bottom = 31.0
rect_min_size = Vector2( 8, 0 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
text = "*"

[node name="Text" type="Label" parent="TextboxCointainer/MarginContainer/HBoxContainer"]
margin_left = 15.0
margin_right = 917.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 6 )
text = "..."
autowrap = true
clip_text = true

[node name="End" type="Label" parent="TextboxCointainer/MarginContainer/HBoxContainer"]
margin_left = 921.0
margin_top = 75.0
margin_right = 932.0
margin_bottom = 106.0
size_flags_horizontal = 0
size_flags_vertical = 12
custom_fonts/font = SubResource( 7 )
text = "*"

[node name="VBoxContainer" type="VBoxContainer" parent="TextboxCointainer/MarginContainer/HBoxContainer"]
visible = false
margin_left = 898.0
margin_right = 932.0
margin_bottom = 106.0
alignment = 1

[node name="Yes" type="Button" parent="TextboxCointainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 34.0
margin_bottom = 51.0
focus_neighbour_top = NodePath("../No")
focus_neighbour_bottom = NodePath("../No")
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Yes"
flat = true

[node name="No" type="Button" parent="TextboxCointainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 34.0
margin_bottom = 106.0
focus_neighbour_top = NodePath("../Yes")
focus_neighbour_bottom = NodePath("../Yes")
size_flags_horizontal = 9
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
text = "No"
flat = true

[node name="Riddle" type="VBoxContainer" parent="TextboxCointainer/MarginContainer/HBoxContainer"]
visible = false
margin_left = 898.0
margin_right = 932.0
margin_bottom = 106.0
alignment = 1

[node name="Answer" type="Button" parent="TextboxCointainer/MarginContainer/HBoxContainer/Riddle"]
margin_right = 34.0
margin_bottom = 51.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Yes"
flat = true

[node name="NAnswer" type="Button" parent="TextboxCointainer/MarginContainer/HBoxContainer/Riddle"]
margin_top = 55.0
margin_right = 34.0
margin_bottom = 106.0
size_flags_horizontal = 9
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
text = "No"
flat = true

[node name="AnswerOptions" type="GridContainer" parent="TextboxCointainer/MarginContainer/HBoxContainer"]
visible = false
margin_left = 904.0
margin_right = 932.0
margin_bottom = 106.0
columns = 2

[node name="Answer1" type="Button" parent="TextboxCointainer/MarginContainer/HBoxContainer/AnswerOptions"]
margin_right = 12.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
flat = true

[node name="Answer2" type="Button" parent="TextboxCointainer/MarginContainer/HBoxContainer/AnswerOptions"]
margin_left = 16.0
margin_right = 28.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
flat = true

[node name="Answer3" type="Button" parent="TextboxCointainer/MarginContainer/HBoxContainer/AnswerOptions"]
margin_top = 55.0
margin_right = 12.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
flat = true

[node name="Answer4" type="Button" parent="TextboxCointainer/MarginContainer/HBoxContainer/AnswerOptions"]
margin_left = 16.0
margin_top = 55.0
margin_right = 28.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
flat = true

[node name="GotIt" type="Button" parent="TextboxCointainer/MarginContainer/HBoxContainer"]
visible = false
margin_left = 854.0
margin_right = 932.0
margin_bottom = 106.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
text = "Got it"
flat = true

[connection signal="pressed" from="TextboxCointainer/MarginContainer/HBoxContainer/VBoxContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="TextboxCointainer/MarginContainer/HBoxContainer/VBoxContainer/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="TextboxCointainer/MarginContainer/HBoxContainer/Riddle/Answer" to="." method="_on_Answer_pressed"]
[connection signal="pressed" from="TextboxCointainer/MarginContainer/HBoxContainer/Riddle/NAnswer" to="." method="_on_NAnswer_pressed"]
